

Version 0.2 (TBA)
=================

New features, enhancements:

  * Improved fuzzy file finder

Bug fixes:
  
  * Fixed paste-over bug (#74)
  * Fixed bug that allows multiple project tabs (#69)
  * Fixed so only one copy of a file can be open (#62)

Version 0.1 (6 April 2009)
==========================
http://redcareditor.com/releases/redcar-0.1.tar.gz

First release. 

Features:

  * Textmate syntax highlighting
  * Textmate snippets
  * Text, Source, Ruby Textmate commands + some others
  * Project pane