@@ -50,7 +50,7 @@ Feature: Multiple panes
     Then there should be 1 pane
 
   Scenario: Unify collects tabs
-    When I press "Super+N"
+    When I press "Ctrl+T"
     When I press "Ctrl+3"
     And I press "Ctrl+1"
     Then there should be 1 pane
